fix: current milestone icon color and button on small screens

--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -8,8 +8,9 @@
   max-height: 100%;
   height: 100vh;
   margin: 0;
-  padding-inline: 2rem;
-  padding-block: 3rem;
+  padding-inline: 0;
+  padding-block-start: 3rem;
+  padding-block-end: 0;
   border: 0;
   background: rgb(0 0 0 / 50%);
   backdrop-filter: blur(10px);
@@ -70,7 +71,9 @@
 }
 
 .dialog__footer {
-  /* position: sticky; */
-  /* bottom: 0; */
+  position: sticky;
+  bottom: 0;
   margin-block-start: 2rem;
+  padding-block-end: 1rem;
+  /* background-color: var(--color-blue); */
 }
